--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "expo": "~44.0.0",
+    "expo-sqlite": "~10.1.0",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-elements": "^3.4.2",
+    "react-native-safe-area-context": "^4.2.1",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
